# Tulu-C-IDE

./: .gvimrc  .vimrc  CCLS-WINDOWS-BUILD.txt  CMake-Latest.md  GDB-a-rudimentary-gdb-tutorial.md  GIT+SSH+GPG-and-Code-Signing.md  LLC-CLANG-MCU-CPU-TARGET.TXT  MSYS2-package-installation-commands.md  README.md  RUST-on-XYZUbuntu.txt  SimulIDE-Circuit-Simulator.md  coc-node-version-update-troubleshoot-ubuntu.txt  coc-settings.json  coc-settings.json.txt  dot.gitconfig-portable-gvim-windows  nappgui-gui-sdk-c.md  platformio-cli-ubuntu-support.sh  premake5.md  tulu_c_ide_download.sh  windsurf-neovim.md
.vimdotcommon/: .vimcommand.txt  .viminit  .vimrc2.vim  init.lua
.vimdotlinux/: .set_tags_n_set_paths.txt  .syntastic_clang_check_config  sample-linux-tagspath.txt
.vimdotwin/: .set_tags_n_set_paths.txt  .syntastic_c_config  .syntastic_clang_tidy_config  .syntastic_cpp_config  .syntastic_include_dir.txt  .vim_clang_includes
Artificial-Intelligence-CLI/: CHATGPT-CLI-set-up-STEPS.txt  README.md  ai-model-test.txt  bard  bard.CMD  chat.json  chat2.json  ollama-offline-ai-on-linux.md  run-ai-software-locally.md
CCLS_GEN/: .lvimrc  Arduino-CLI-Install-Win.txt  PIO-Install-Win.txt  arduheaders.c  arduheaderswin.c  ccls_gen.md  duprem.h  systags.c  systagswin.c
Code_Snippets_Extra/: Dll Project.txt  StaticLib.c  analyze_w_cppcheck.bat  anyfileopen.c  blank_header.h  bundled.libraries.dynamic.h  bundled.libraries.static.h  call_dll_on_the_fly.c  cmd_help.txt  color02.c  console_color.txt  directory_reader.bat  dll.specification.h  dllapientrypoint.c  random.txt  scancode_appu.h  setting_path_tmp.bat  srand_no.c  usedll_loadtime.c
LocalVimrc_project_sample/: .clang.ow  .lvimrc  Projects with Localvimrc and custom configuration.html  README.md
LocalVimrc_templates/PLUGIN_CHOICE_ONE/: .ccls.MSYS2  .ccls.RaspberryPiPico2040  .ccls.Ubuntu20  .ccls.Ubuntu22  .ccls.esp8266.WIN  .lvimrc  CMAKE_BUILD.txt  CMakeLists.txt  NOTE.txt  README.md  ccls-extra-lib-path.txt  check_all.bat  check_all_MSYS2.sh  compile_flags.txt  compile_flags.txt.MSYS2  compile_flags.txt.RaspberryPiPico2040.WIN  compile_flags.txt.Ubuntu20  compile_flags.txt.Ubuntu22  compile_flags.txt.esp8266.WIN  test3.c  vscode addl settings.txt  vscodestart.BAT
R-Click context menu to open cmd.exe inside a folder on MS Win/: TerminalHere.reg.txt
Snippets_n_Extras/: LINUX_INCLUDE_DIRS.txt  vimcommands.txt
Snippets_n_Extras/snippets/cmake/: CMakeLists.txt
Utilities/: LICENCE.txt  README.md  RemainderFinder.c  chartestverifictn.c  chartestverifictnreverse.c  sfn_converter_2.c  snippets_symlink.BAT  winexplore_2.c
_helix_edition/: Helix_Install.txt  README.md  config.toml  rust-analyzer-build-instructions.txt
console-config/: alacritty.mswindows.yml  mswindows-wezterm.lua  msysb.cmd  msysf.cmd  omb-omf.txt  ubuntu-wezterm.lua
libraries/: safeclib-build-linux.md  (+2 more)
lite_edition/: .vimrc  (+1 more)
(+653 files in other folders)
